--- a/package.json
+++ b/package.json
@@ -8,8 +8,6 @@
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "axios": "^0.21.4",
-    "concurrently": "^6.2.1",
-    "electron": "^14.0.0",
     "electron-is-dev": "^2.0.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
@@ -18,7 +16,6 @@
     "redux-thunk": "^2.3.0",
     "sass": "^1.39.0",
     "sass-loader": "^12.1.0",
-    "wait-on": "^6.0.0",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
@@ -44,5 +41,11 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "concurrently": "^6.2.1",
+    "electron": "^14.0.0",
+    "electron-builder": "^22.11.7",
+    "wait-on": "^6.0.0"
   }
 }
