--- a/package.json
+++ b/package.json
@@ -1,13 +1,20 @@
 {
-  "name": "test",
+  "name": "currencer",
+  "description": "Electron + React Currencer App",
   "version": "0.1.0",
   "private": true,
   "main": "public/electron.js",
+  "author": {
+    "name": "ext33",
+    "email": "ext33ws@gmail.com",
+    "url": "https://ext33.vercel.app/"
+  },
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "axios": "^0.21.4",
+    "cross-env": "^7.0.3",
     "electron-is-dev": "^2.0.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
@@ -19,10 +26,27 @@
     "web-vitals": "^1.0.1"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "dev": "concurrently -k \"BROWSER=none npm start\" \"npm:electron\"",
-    "electron": "wait-on tcp:3000 && electron ."
+    "react-start": "react-scripts start",
+    "react-build": "react-scripts build",
+    "electron-build": "electron-builder",
+    "start": "concurrently \"cross-env BROWSER=none yarn react-start\" \"wait-on http://localhost:3000 && electron .\"",
+    "release": "yarn react-build && electron-builder --publish=always",
+    "build": "yarn react-build && yarn electron-build"
+  },
+  "build": {
+    "appId": "com.my-website.my-app",
+    "productName": "Currencer",
+    "copyright": "Copyright © ext33",
+    "mac": {
+      "category": "public.app-category.utilities"
+    },
+    "files": [
+      "build/**/*",
+      "node_modules/**/*"
+    ],
+    "directories": {
+      "buildResources": "build"
+    }
   },
   "eslintConfig": {
     "extends": [
